--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=68ca0c3218b519d391a9
+github.client.secret=1512d4c60ef61a38e8e373bf2367ca3a4ab9c88f
+github.redirect.uri=http://localhost:8887/callback
